syntax = "proto3";

package core;

enum AppStatus {
    USER_STORIES = 0;
    DESIGN = 1;
    DEVELOPMENT = 2;
    RELEASE = 3;
}

enum ImageType {
    PROFILE = 0;
    COVER = 1;
}

message Product {
    string id = 1;
}

message Link {
    string name = 1;
    string url = 2;
}

message Image {
    ImageType type = 1;
    string url = 2;
}

message App {
    string id = 1;
    string created_at = 2;
    string updated_at = 3;
    string name = 4;
    AppStatus status = 5;
    repeated Product products = 6;
    repeated Link links = 7;
    repeated Image images = 8;
}

message Apps {
    repeated App apps = 1;
}

enum UserRole {
    ADMIN = 0;
    USER = 1;
}

enum UserRequestStatus {
    IDLE = 0;
    REQUESTED = 1;
    ACCEPTED = 2;
    UPDATE_REQUESTED = 3;
    UPDATE_ACCEPTED = 4;
}

message Location {
    string longitude = 1;
    string latitude = 2;
}

message User {
    string id = 1;
    string created_at = 2;
    string supabase_id = 3;
    UserRole role = 4;
    string company = 5;
    string email = 6;
    string phone_number = 7;
    Location location = 8;
    string language = 9;
    UserRequestStatus request_status = 10;
    repeated string apps = 11;
}

message Users {
    repeated User users = 1;
}

message GettingStartedRequest {
    string company = 1;
    string phone_number = 2;
    string comment = 3;
}